// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Image Broken 1`] = `
<section
  class="storybook-snapshot-container"
>
  <img
    alt="./unknown.jpg"
    class="w-64 h-64 inline-block rounded-sm svelte-hn7eai"
    height="256"
    loading="lazy"
    src="./unknown.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</section>
`;

exports[`Storyshots Components/Image Broken Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <img
    class="w-64 h-64 inline-block rounded-full hidden svelte-hn7eai"
    height="256"
    loading="lazy"
    width="256"
  />
   
  <span
    class="w-64 h-64 inline-block svelte-hn7eai rounded-full"
  >
    <i
      class="material-icons svelte-hn7eai"
    >
      person
    </i>
  </span>
  
   
  <div>
    
  </div>
</section>
`;

exports[`Storyshots Components/Image Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <img
    alt="./cover.jpg"
    class="w-64 h-64 inline-block rounded-sm svelte-hn7eai"
    height="256"
    loading="lazy"
    src="./cover.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</section>
`;

exports[`Storyshots Components/Image Rouded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <img
    alt="./avatar.jpg"
    class="w-64 h-64 inline-block rounded-full svelte-hn7eai"
    height="256"
    loading="lazy"
    src="./avatar.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</section>
`;

exports[`Storyshots Components/Image With Escaped Path 1`] = `
<section
  class="storybook-snapshot-container"
>
  <img
    alt="./# Films/cover.jpg"
    class="w-64 h-64 inline-block rounded-sm svelte-hn7eai"
    height="256"
    loading="lazy"
    src="./%23 Films/cover.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</section>
`;
